envoy/basic_http_config.yaml
static_resources:
  listeners:
  - name: mylistener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
         "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
         stat_prefix: http_proxy
         route_config:
           name: all
           virtual_hosts:
           - name: allbackend_cluster
             domains:
               - "*"
             routes:
             - match: { prefix: "/" }
               route:
                 cluster: allbackend_cluster
         http_filters:
         - name: envoy.filters.http.router
  clusters:
  - name: allbackend_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: allbackend_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: gcpenvoyvm
                port_value: 1111
        - endpoint:
            address:
              socket_address:
                address: gcpenvoyvm
                port_value: 2222
        - endpoint:
            address:
              socket_address:
                address: gcpenvoyvm
                port_value: 3333
        - endpoint:
            address:
              socket_address:
                address: gcpenvoyvm
                port_value: 4444
